--- a/src/components/ToDoComponent/ToDoComponent.module.scss
+++ b/src/components/ToDoComponent/ToDoComponent.module.scss
@@ -15,6 +15,7 @@
 
 .todo_component_body{
     display: grid;
+    column-gap: 5px;
     grid-template-columns: repeat(12, 1fr);
     padding: 5px 10px;
     align-items: center;
